# python-ingestion-lib

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml  test_and_build.yml
cognite/ingestion/: __init__.py  config.py  data_types.py  ingester.py  queues.py  retry.py
tests/: test_cognite_ingestion_library.py
