[tool.poetry]
name = "cognite-ingestion-library"
version = "0.1.0"
description = "Library for converting arbitrary schema output to CDF types and ingesting them"
authors = ["Einar Omang <einar.omang@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyjq = "^2.6"
cognite-sdk = "^4.5.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'
